Revision history for {{$dist->name}}

{{$NEXT}}
        - the distribution tarball name no longer includes -TRIAL if the
          version contains an underscore

5.039     2015-08-10 09:03:08-04:00 America/New_York
        - update required version of MooseX::Role::Parameterized; older
          versions work, but can cause a bunch of unwanted warnings

5.038     2015-08-07 22:16:50-04:00 America/New_York
        - [License] can be given a filename option to use instead of LICENSE
        - dzil listdeps --develop now exists as an alias for dzil listdeps
          --author (Karen Etheridge)
        - dzil authordeps now lists the Software::License class needed
          (thanks, David Zurborg)
        - PkgVersion now skips .pod files (thanks, David Golden)
        - build_element support added for [ModuleBuild] (thanks, David
          Wheeler!)
        - new native filefinder :ExtraTestFiles (thanks, Karen Etheridge)
        - [AutoPrereqs] now looks for develop prerequisites in xt/ (thanks,
          Karen Etheridge)
        - new file finder ':PerlExecFiles' (thanks, Karen Etheridge)
        - try harder to notice failure to set up build root, especially on
          Win32 (thanks, Christian Walde)
        - better errors when a global config package isn't available (thanks,
          Karen Etheridge)
        - added the "ignore" option to [Encoding] (thanks, Yanick Champoux)
        - allow ; authordep specifications to contain version ranges (thanks,
          Karen Etheridge)
        - better error when PAUSE credentials can't be loaded (thanks, David
          Golden)
        - fix documentation for the LicenseProvider role
        - improve errors when PPI failes to parse (thanks, Nick Tonkin)
        - sort list of executable files in Makefile.PL, for deterministic
          builds (thanks, Karen Etheridge)
        - omit configure-requires prerequisites from [MakeMaker]'s fallback
          prerequisites (used by older ExtUtils::MakeMaker)
