@@ -1,5 +1,5 @@
 package Dist::Zilla::Plugin::PodCoverageTests;
-# ABSTRACT: a release test for Pod coverage
+# ABSTRACT: a author test for Pod coverage
 
 use Moose;
 extends 'Dist::Zilla::Plugin::InlineFiles';
@@ -12,7 +12,7 @@ use namespace::autoclean;
 This is an extension of L<Dist::Zilla::Plugin::InlineFiles>, providing the
 following files:
 
-  xt/release/pod-coverage.t - a standard Test::Pod::Coverage test
+  xt/author/pod-coverage.t - a standard Test::Pod::Coverage test
 
 This test uses L<Pod::Coverage::TrustPod> to check your Pod coverage.  This
 means that to indicate that some subs should be treated as covered, even if no
@@ -25,7 +25,7 @@ C<develop requires> dependencies.
 
 =cut
 
-# Register the release test prereq as a "develop requires"
+# Register the author test prereq as a "develop requires"
 # so it will be listed in "dzil listdeps --author"
 sub register_prereqs {
   my ($self) = @_;
@@ -44,7 +44,7 @@ __PACKAGE__->meta->make_immutable;
 1;
 
 __DATA__
-___[ xt/release/pod-coverage.t ]___
+___[ xt/author/pod-coverage.t ]___
 #!perl
 # This file was automatically generated by Dist::Zilla::Plugin::PodCoverageTests.
 
