@@ -22,10 +22,10 @@ $tzil->build;
 my $meta_test = $tzil->slurp_file('build/xt/release/distmeta.t');
 like($meta_test, qr{meta_yaml_ok}, "we have a distmeta file that tests it");
 
-my $pod_test = $tzil->slurp_file('build/xt/release/pod-syntax.t');
+my $pod_test = $tzil->slurp_file('build/xt/author/pod-syntax.t');
 like($pod_test, qr{all_pod_files_ok}, "we have a pod-syntax test");
 
-my $pod_c_test = $tzil->slurp_file('build/xt/release/pod-coverage.t');
+my $pod_c_test = $tzil->slurp_file('build/xt/author/pod-coverage.t');
 like($pod_c_test, qr{all_pod_coverage_ok}, "we have a pod-coverage test");
 
 cmp_deeply(
