@@ -4,6 +4,10 @@ Revision history for {{$dist->name}}
         - the distribution tarball name no longer includes -TRIAL if the
           version contains an underscore
 
+        - made the PodCoverageTests and PodSyntaxTests plugins generate author
+          tests, not release tests. These are tests you want passing on every
+          commit, not just before a release (Dave Rolsky)
+
 5.039     2015-08-10 09:03:08-04:00 America/New_York
         - update required version of MooseX::Role::Parameterized; older
           versions work, but can cause a bunch of unwanted warnings
